semantic fixes